# Ai-News

./: README.md
Ai-News/: ABOUT.md  README.md  pyproject.toml
Ai-News/.github/workflows/: weekly_digest.yml
Ai-News/app/: core.py  engine.py
Ai-News/config/: scoring_rules.yaml  sources.yaml  topics.yaml
Ai-News/tests/: test_deduplicator.py
personal-intelligence-digest/: .env.example  .gitignore  README.md  requirements.txt
personal-intelligence-digest/.github/workflows/: weekly_digest.yml
personal-intelligence-digest/app/: __init__.py  collectors.py  main.py
personal-intelligence-digest/templates/: weekly_digest.html.j2
personal-intelligence-digest/tests/: test_classifier.py  test_deduplicator.py  test_ranker.py
